tests/samples/negative/functions/explicit_abi_duplicate.ax
module explicit_abi_duplicate;

@name("same_symbol")
fn first() -> i32 {
  return 1;
}

@name("same_symbol")
fn second() -> i32 {
  return 2;
}

fn main() -> i32 {
  return first() + second();
}
